--- a/src/app/auth/reset-password/reset-password.component.css
+++ b/src/app/auth/reset-password/reset-password.component.css
@@ -17,3 +17,37 @@ mat-form-field {
 .submit-btn button {
   margin-top: 10px;
 }
+
+@media screen and (max-width: 900px) {
+  .reset-container {
+    width: 50%;
+  }
+
+  .mat-display-1 {
+    font-weight: 300;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .reset-container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .reset-container {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .reset-container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .reset-container {
+    width: 90%;
+  }
+}
