--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -9,11 +9,6 @@
   margin-bottom: 15px;
 }
 
-/* mat-card {
-  width: 60%;
-  margin: 1rem auto;
-} */
-
 mat-form-field {
   width: 100%;
   margin-bottom: 10px;
@@ -26,4 +21,38 @@ mat-form-field {
 .submit-btn {
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 900px) {
+  .login-container {
+    width: 50%;
+  }
+
+  .mat-display-1 {
+    font-weight: 300;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .login-container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .login-container {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .login-container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .login-container {
+    width: 90%;
+  }
 }
