--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,5 +1,5 @@
 .register-container {
-  width: 60%;
+  width: 50%;
   margin: 5px auto;
   margin-top: 2rem;
 }
@@ -22,6 +22,30 @@ button[type="submit"] {
   margin-top: 10px;
 }
 
-/* .submit-btn {
-  margin-top: 5px;
-} */
+@media screen and (max-width: 900px) {
+  .register-container {
+    width: 60%;
+  }
+
+  .mat-display-1 {
+    font-weight: 300;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .register-container {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .register-container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .register-container {
+    width: 90%;
+  }
+}
