--- a/src/app/auth/user/user.component.css
+++ b/src/app/auth/user/user.component.css
@@ -5,13 +5,7 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
-  /* justify-content: center;
-  align-items: center; */
 }
-
-/* .container-side-panel {
-  flex-grow: 1;
-} */
 
 /* LEFT SIDE PANEL (user avatar, etc.) */
 mat-card img {
@@ -59,10 +53,6 @@ mat-card img {
   width: 100%;
 }
 
-/* .user-settings-form {
-  margin: 20px 20px;
-} */
-
 .mat-stepper-vertical {
   margin-top: 8px;
 }
@@ -84,6 +74,7 @@ mat-card img {
   color: #8d8585;
   text-align: justify;
   text-justify: auto;
+  white-space: pre-wrap;
 }
 
 mat-slide-toggle {
@@ -100,12 +91,6 @@ mat-slide-toggle:last-of-type {
   line-height: 30px;
   font-size: 18px;
 }
-
-/* .notification-tab-body {
-  width: 100%;
-  height: auto;
-  overflow: auto;
-} */
 
 .current-user-notifications-list {
   list-style: none;
@@ -135,9 +120,6 @@ mat-slide-toggle:last-of-type {
   background-color: #f0eeee;
 }
 
-/* .notification-action {
-  float: right;
-} */
 .notification-switch-case {
   display: flex;
   justify-content: space-between;
@@ -161,4 +143,74 @@ mat-slide-toggle:last-of-type {
   object-fit: cover;
   overflow: hidden;
   border-radius: 50%;
+}
+
+@media screen and (max-width: 950px) {
+  .container-user {
+    width: 70%;
+    flex-direction: column;
+  }
+
+  .container-side-panel {
+    display: flex;
+  }
+
+  .container-side-panel mat-card:last-of-type {
+    flex: 1;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .container-user {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .container-user {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container-side-panel {
+    flex-direction: column;
+  }
+
+  mat-card img {
+    width: 100%;
+    height: 240px;
+    background-position: center;
+    padding-left: 15px;
+    padding-top: 10px;
+  }
+
+  .container-side-panel mat-card:last-of-type {
+    margin-left: 0;
+  }
+
+  mat-slide-toggle {
+    padding: 15px 0;
+  }
+
+  .mat-slide-toggle-text {
+    /* font-size: 0.75rem; */
+    white-space: pre-wrap;
+    text-align: justify;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  mat-slide-toggle {
+    padding: 25px 0;
+  }
+
+  .mat-slide-toggle-text {
+    font-size: 0.75rem;
+  }
+
+  .informative-p {
+    font-size: 0.75rem;
+  }
 }
