--- a/src/app/auth/user/user.component.css
+++ b/src/app/auth/user/user.component.css
@@ -159,6 +159,14 @@ mat-slide-toggle:last-of-type {
     flex: 1;
     margin-left: 10px;
   }
+
+  .container-tabs {
+    margin-left: 0;
+  }
+
+  .co-user-details {
+    margin-top: 15px;
+  }
 }
 
 @media screen and (max-width: 850px) {
