--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,14 +1,13 @@
 <mat-progress-bar
   mode="indeterminate"
   color="warn"
+  [ngStyle]="{ height: '2px' }"
   *ngIf="isLoading"
 ></mat-progress-bar>
 <app-header></app-header>
 
 <div class="reset-container" *ngIf="!isLoading">
-  <h1 class="mat-display-1">
-    Password Reset
-  </h1>
+  <h1 class="mat-display-1">Password Reset</h1>
   <mat-card>
     <form #resetPWForm="ngForm" (submit)="onSubmit(resetPWForm)">
       <mat-form-field appearance="fill">
