--- a/src/app/auth/user/dialog/password-dialog.component.html
+++ b/src/app/auth/user/dialog/password-dialog.component.html
@@ -1,6 +1,7 @@
 <mat-progress-bar
   mode="indeterminate"
   color="warn"
+  [ngStyle]="{ height: '2px' }"
   *ngIf="isLoading"
 ></mat-progress-bar>
 <h1 mat-dialog-title>Change Password</h1>
