--- a/src/app/campgrounds/home/home.component.css
+++ b/src/app/campgrounds/home/home.component.css
@@ -82,6 +82,14 @@
   justify-content: space-evenly;
 }
 
+.loading-campground-image {
+  margin: 20px auto;
+  vertical-align: middle;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+}
+
 .grid-card {
   flex-basis: 1 0 33%;
   box-sizing: border-box;
@@ -103,6 +111,10 @@
   object-fit: cover;
   width: 100%;
   height: 70%;
+}
+
+.campground-preview-image img {
+  background: url("../../../assets/svg/camera-24px.svg") no-repeat scroll 0 0;
 }
 
 .campground-preview-cta {
